fixed style for horicontal scrollbar

--- a/www/frameworks/scrollbar/style.css
+++ b/www/frameworks/scrollbar/style.css
@@ -8,6 +8,7 @@
 
 .custom-scrollbar::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
